src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__startup_first_run_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---






        sqwai 1.2.3 · /home/user/projects/myapp · main ✓ clean · test-model

        this project has no .sqwai yet
        /init create AGENTS.md and memory or just type a task

        ❯ type a task to start

        tab: plan / act           /help: controls         /init: set up project












────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
