src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__startup_no_plan_with_history_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---






        sqwai 1.2.3 · /home/user/projects/myapp · main ✓ clean · test-model

        no active plan · last session 2025-01-15
        memory        graph ready

        recent        2025-01-15      Fix login bug           Completed
                      2025-01-14      Add dark mode           Completed

        ❯ type a task to start

        tab: plan / act           /help: controls









────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
