src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__startup_no_plan_with_history_70x24.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---





  sqwai 1.2.3 · /home/user/projects/myapp · main ✓

  no active plan
  memory  graph ready

  ❯ type a task to start

  tab    plan / act
  /help  controls






──────────────────────────────────────────────────────────────────────
›
──────────────────────────────────────────────────────────────────────
 ACT                            cache 0% · 0% · 0 · m  ef:off [CWD]
